--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
- --quickbite-red: rgb(232, 87, 77);
+ --quickbite-red: #e8574d;
  --quickbite-gold: #F19E39; 
 }
 
@@ -15,9 +15,30 @@ body {
     font-weight: 600;
 }
 
+/* #test {
+    visibility: hidden;
+    display: block;
+    padding: 0;
+    height: 1px;
+    width: 100%;
+    background-color: black;
+    width: 100%;
+    margin: 2rem;
+} */
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
 main {
     margin: 0 auto;
-   
+
 }
 
 #welcome-section { 
@@ -50,12 +71,23 @@ main {
     padding: 0 3vw;
 }
 
-#logo {
+.logo-text {
     font-family: 'Grenze Gotisch', cursive;
     color: var(--quickbite-red);
-    font-size: 4vh;
-
+    
 }
+
+#welcome-section .logo-text {
+    font-size: 4vh;
+}
+
+#down-button-container {
+    display: block;
+    margin: 0 auto;
+    height: 2vh;
+    width: 3vh;
+}
+
 .button {
     display: block;
     margin: 3vh auto;
@@ -63,22 +95,26 @@ main {
     min-width: 1rem; */
     height: 2vh;
     width: 3vh;
-    background-color: var(--quickbite-red);
+    border: 2px solid var(--quickbite-red);
+    background-color: var(--quickbite-gold);
     border-radius: 4px;
+    transition: background-color 0.5s;
 }
 
 .button:hover {
     cursor: pointer;
+    background-color: rgb(220, 146, 56);
 }
 
 nav {
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: var(--quickbite-gold);
+    /* background-color: rgba(255, 255, 255, 0.4); */
     display: flex;
     justify-content: space-between;
     height: 22vw;
     max-height: 8rem;
     position: sticky;
-    top: 0;
+    top: 1vh;
     width: 100%;
     align-items: center;
 }
@@ -87,6 +123,25 @@ nav {
     opacity: 1;
     height: 6rem;
     margin: 1rem 1rem 1rem 2rem;
+}
+
+#nav-button {
+    display: none;
+    height: 34px;
+    width: 34px;
+    border: 1px transparent white;
+    border-radius: 6px;
+    margin: 1rem 1rem 1rem 5vw;
+    transition: background-color 0.3s ease-out;
+}
+
+.nav-line {
+    max-height: 2px;
+    min-height: 2px;
+    max-width: 23px;
+    min-width: 23px;
+    background-color: white;
+    margin: 7px 6px;
 }
 
 #nav-bar {
@@ -98,6 +153,39 @@ nav {
     color: white;
 }
 
+#nav-button-menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgba(232, 87, 77);
+    margin: 0;
+    display: none;
+    height: 100vh;
+}
+
+#nav-menu-exit img {
+    display: block;
+    margin: 2rem auto;
+    height: 34px;
+    width: 34px;
+}
+
+#nav-menu-exit img:hover {
+    cursor: pointer;
+}
+
+#nav-button-menu ul {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    width: 80vw;
+}
+
+#nav-button-menu li p {
+    margin-top: 0;
+    font-size: 6vh;
+}
+
 #nav-bar li {
     margin: 0 1rem;
 }
@@ -107,6 +195,20 @@ nav {
     padding: 0 1rem;
 }
 
+h2 {
+    color: white;
+    font-size: 3.5vh;
+    font-weight: 600;
+}
+
+#restaurant-info .logo-text {
+    color: var(--quickbite-gold);
+    font-size: 4vh;
+}
+
+#restaurant-info p {
+    font-size: 2vh;
+}
 @media (max-width: 1250px) {
     /* #nav-bar {
         font-size: 5vw;
@@ -119,6 +221,11 @@ nav {
 }
 
 @media (max-width: 700px) {
+    #nav-button {
+        display: block;
+    }
+
+
     #nav-bar {
         display: none;
     }
