--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ padding: 0;
 
 body {
     margin: 0;
-    color: var(--quickbite-gold);
+    color: white;
     font-family: 'Baloo 2', cursive;
     font-weight: 600;
 }
@@ -57,7 +57,7 @@ main {
     display: block;
     margin: 0 auto;
     width: 80vw;
-    max-height: 70vh;
+    max-height: 65vh;
     max-width: 1000px;
     padding: 5vh 0 5vh 0;
 }
@@ -95,6 +95,8 @@ main {
     min-width: 1rem; */
     height: 2vh;
     width: 3vh;
+    min-height: 15px;
+    min-width: 20px;
     border: 2px solid var(--quickbite-red);
     background-color: var(--quickbite-gold);
     border-radius: 4px;
@@ -157,7 +159,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgb(232, 87, 77);
+    background-color: var(--quickbite-red);
     margin: 0;
     display: none;
     height: 100vh;
@@ -165,7 +167,7 @@ nav {
 
 #nav-menu-exit img {
     display: block;
-    margin: 2rem auto;
+    margin: 4rem auto;
     height: 34px;
     width: 34px;
 }
@@ -182,8 +184,14 @@ nav {
 }
 
 #nav-button-menu li p {
-    margin-top: 0;
+    margin: 0 auto;
+    padding: 5vh;
     font-size: 6vh;
+    border-top: 1px solid white;
+}
+
+.active {
+    color: var(--quickbite-gold);
 }
 
 #nav-bar li {
@@ -195,20 +203,41 @@ nav {
     padding: 0 1rem;
 }
 
-h2 {
+h1 {
     color: white;
-    font-size: 3.5vh;
+    font-size: 2rem;
     font-weight: 600;
+    margin: 3rem auto;
 }
 
 #restaurant-info .logo-text {
     color: var(--quickbite-gold);
-    font-size: 4vh;
+    font-size: 2.5rem;
+}
+
+#restaurant-info ul {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+#restaurant-info li {
+    margin: 3rem auto 5rem auto;
+}
+
+#restaurant-info h2 {
+    color: var(--quickbite-gold);
+    margin: 1rem auto;
+}
+
+#restaurant-info h3 {
+    margin: 0.5rem auto;
 }
 
 #restaurant-info p {
-    font-size: 2vh;
+    font-size: 1rem;
+    text-align: left;
 }
+
 @media (max-width: 1250px) {
     /* #nav-bar {
         font-size: 5vw;
