--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ background-color: var(--quickbite-red);
 padding: 0;
 }
 
+html.alt {
+    background-color: #F19E39;
+}
+
 body {
     margin: 0;
     color: white;
@@ -38,8 +42,9 @@ ul {
 
 main {
     margin: 0 auto;
-
 }
+
+
 
 #welcome-section { 
     background-color: var(--quickbite-gold);
@@ -172,7 +177,7 @@ nav {
 
 #nav-menu-exit img {
     display: block;
-    margin: 4rem auto;
+    margin: 5vh auto;
     height: 34px;
     width: 34px;
 }
@@ -190,9 +195,13 @@ nav {
 
 #nav-button-menu li p {
     margin: 0 auto;
-    padding: 5vh;
+    padding: 3vh;
     font-size: 6vh;
     border-top: 1px solid white;
+}
+
+nav.alt {
+    background-color: var(--quickbite-red);
 }
 
 .active {
@@ -245,16 +254,18 @@ p .logo-text {
 
 #restaurant-info h2 {
     color: var(--quickbite-gold);
-    margin: 1rem auto;
+    margin: 0 auto;
 }
 
 #restaurant-info h3 {
     margin: 0.5rem auto;
+    text-align: left;
 }
 
 #restaurant-info p {
     font-size: 1rem;
     text-align: left;
+    margin: 0 auto;
 }
 
 @media (max-width: 1250px) {
