--- a/styles/style.css
+++ b/styles/style.css
@@ -8,10 +8,6 @@ background-color: var(--quickbite-red);
 padding: 0;
 }
 
-html.alt {
-    background-color: #F19E39;
-}
-
 body {
     margin: 0;
     color: white;
@@ -43,8 +39,6 @@ ul {
 main {
     margin: 0 auto;
 }
-
-
 
 #welcome-section { 
     background-color: var(--quickbite-gold);
@@ -200,10 +194,6 @@ nav {
     border-top: 1px solid white;
 }
 
-nav.alt {
-    background-color: var(--quickbite-red);
-}
-
 .active {
     color: var(--quickbite-gold);
 }
@@ -249,7 +239,7 @@ p .logo-text {
 }
 
 #restaurant-info li {
-    margin: 3rem auto 5rem auto;
+    margin: 3rem auto 4rem auto;
 }
 
 #restaurant-info h2 {
@@ -258,8 +248,8 @@ p .logo-text {
 }
 
 #restaurant-info h3 {
-    margin: 0.5rem auto;
-    text-align: left;
+    margin: 0 auto 0.5rem auto;
+    text-align: left
 }
 
 #restaurant-info p {
