--- a/styles/menu.css
+++ b/styles/menu.css
@@ -10,25 +10,69 @@ nav.alt {
     padding: 0 1.2rem;
 }
 
-/* #menu h2 {
+#welcome-text {
+    margin: 2rem auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+}
 
-} */
+#welcome-text h1 {
+    margin: 0;
+    color: var(--quickbite-red);
+    font-weight: bold;
+}
+
+#welcome-text img {
+    height: 5rem;
+    margin: 0 2rem;
+}
+
 
 #menu h3 {
 text-align: left;
 }
 
 #menu p.category-description {
-    text-indent: 0;
+    padding-left: 0;
+    font-weight: 400;
+    margin-top: 0;
 }
 
 #menu h4 {
-    text-indent: 1rem;
+    margin: 0 0 0 0;
     text-align: left;
-    font-weight: bolder;
+    font-weight: 800;
+    color: var(--quickbite-red);
 }
 
 #menu p {
-    text-indent: 2rem;
     text-align: left;
 }
+
+.menu-list-item h2 {
+    margin: 0;
+    color: var(--quickbite-red);
+}
+
+.individual-list-item {
+    margin: 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+}
+
+.ingredients {
+    font-weight: 400;
+    margin: 0 ;
+}
+
+.individual-description {
+    font-weight: 600;
+    margin: 0;
+}
+
+.menu-list-item {
+    margin: 2rem 0;
+}
+
