--- a/styles/menu.css
+++ b/styles/menu.css
@@ -11,7 +11,7 @@ nav.alt {
 }
 
 #welcome-text {
-    margin: 2rem auto;
+    margin: 4rem auto 2.5rem auto;
     display: flex;
     align-items: center;
     justify-content: center;  
@@ -24,19 +24,32 @@ nav.alt {
 }
 
 #welcome-text img {
-    height: 5rem;
+    height: 4rem;
     margin: 0 2rem;
 }
 
+#category-welcome-text {
+    display: flex;
+    align-items: center; 
+}
+
+#category-welcome-text img {
+    height: 1.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
 
 #menu h3 {
 text-align: left;
+color: var(--quickbite-red);
+margin: 0.5rem 0 0 0;
 }
 
-#menu p.category-description {
+#menu p.category-description, #menu p.dishtype-description {
     padding-left: 0;
     font-weight: 400;
     margin-top: 0;
+    margin-bottom: 0.5rem;
 }
 
 #menu h4 {
@@ -56,7 +69,7 @@ text-align: left;
 }
 
 .individual-list-item {
-    margin: 1rem;
+    margin: 0.5rem 1rem 1rem 1rem;
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 4px;
     padding: 0.5rem 1rem;
@@ -73,6 +86,13 @@ text-align: left;
 }
 
 .menu-list-item {
-    margin: 2rem 0;
+    margin: 3rem 0;
 }
 
+p.category-description {
+    margin-bottom: 0.5rem;
+}
+
+.dishtype-list-item {
+    margin-bottom: 1.5rem;
+}
