--- a/styles/style.css
+++ b/styles/style.css
@@ -241,6 +241,7 @@ p .logo-text {
     font-size: 1.2rem;
 }
 
+
 #restaurant-info ul {
     max-width: 700px;
     margin: 0 auto;
@@ -265,6 +266,40 @@ p .logo-text {
     font-size: 1rem;
     text-align: left;
     margin: 0 auto;
+}
+
+footer {
+    height: 10rem;
+    background-color: var(--quickbite-gold);
+}
+
+#socialmedia-icons {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 1.5rem 0 1rem 0;
+    margin: 0 auto;
+}
+
+#socialmedia-icons img {
+    height: 2rem;
+    margin: 0rem 0.5rem;
+}
+
+#line-break {
+    height: 1px;
+    background-color:rgba(255, 255, 255, 0.5);
+}
+
+#created-by {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+#created-by .logo-text {
+    font-size: 2.5rem;
+    margin: 0;
 }
 
 @media (max-width: 1250px) {
