--- a/styles/style.css
+++ b/styles/style.css
@@ -15,17 +15,6 @@ body {
     font-weight: 600;
 }
 
-/* #test {
-    visibility: hidden;
-    display: block;
-    padding: 0;
-    height: 1px;
-    width: 100%;
-    background-color: black;
-    width: 100%;
-    margin: 2rem;
-} */
-
 a {
     color: inherit;
     text-decoration: none;
@@ -97,46 +86,6 @@ h1 {
 
 #welcome-section .logo-text {
     font-size: 4vh;
-}
-
-#down-button-container {
-    display: block;
-    margin: 0 auto;
-    height: 2vh;
-    width: 3vh;
-}
-
-.button {
-    display: block;
-    margin: 3vh auto;
-    /* min-height: 1rem;
-    min-width: 1rem; */
-    height: 2vh;
-    width: 3vh;
-    min-height: 15px;
-    min-width: 20px;
-    border: 2px solid var(--quickbite-red);
-    background-color: var(--quickbite-gold);
-    border-radius: 4px;
-    transition: background-color 0.5s;
-}
-
-.button.alt {
-    margin: 1rem auto;
-    height: 1.5rem;
-    width: 2.5rem;
-    border: 2px solid var(--quickbite-gold);
-    background-color: var(--quickbite-red);
-}
-
-.button:hover {
-    cursor: pointer;
-    background-color: rgb(220, 146, 56);
-}
-
-.button.alt:hover {
-    border: 2px solid var(--quickbite-gold);
-    background-color: rgb(245, 91, 79);
 }
 
 nav {
@@ -284,20 +233,11 @@ p .logo-text {
     margin: 0 auto;
 }
 
-#side-button-container {
-    display: block;
-    margin: 1rem auto;
-    height: 1.5rem;
-    width: 3rem;
-    background-color: var(--quickbite-red);
-    text-align: center;
-}
-
-#continue-prompt {
+.continue-prompt {
     margin: 3rem;
 }
 
-#continue-prompt h1 {
+.continue-prompt h1 {
     margin-bottom: 1rem;
 }
 
