--- a/styles/style.css
+++ b/styles/style.css
@@ -38,10 +38,12 @@ main {
     text-align: center;
     width: 100%;
     height: 100vh;
+    padding: 0;
 }
 
 .content {
     margin: 0 auto;
+    padding: 0 1.2rem;
     max-width: 1000px;
 }
 
@@ -189,7 +191,6 @@ nav {
 
 #restaurant-info {
     font-size: 1rem;
-    padding: 0 1.2rem;
 }
 
 h3 .logo-text {
