--- a/styles/about.css
+++ b/styles/about.css
@@ -12,9 +12,6 @@
 .parallax-item {
     width: 100%;
     height: 100%;
-}
-
-#parallax-lake img {
     position: absolute;
     top: 0;
     left: 0;
@@ -29,10 +26,19 @@
     z-index: 2;
 }
 
-h1#text {
+
+
+div#text {
     position: relative;
     z-index: 0;
     padding: 0 1rem;
-    font-size: 3.5vh;
     margin: 20vh auto 0 auto;
+}
+
+div#text h1 {
+    font-size: 3.5vh;
+}
+
+div#text p {
+    font-size: 1rem;
 }
