--- a/styles/about.css
+++ b/styles/about.css
@@ -62,15 +62,27 @@ div#text p {
     margin: 0 auto 0.5rem auto;
 }
 
-#opening-hours {
-   margin: 0 auto;
-   text-align: center;
-   justify-content: center;
+ #opening-hours {
+   margin: 3rem auto;
 }
 
 #opening-hours-grid {
+    justify-content: center;
+    gap: 0.5rem;
     margin: 0 auto;
+    background-color: var(--quickbite-gold);
     display: grid;
     grid-template-columns: repeat(2, 10rem);
     grid-template-rows: repeat(7, 3rem);
+    padding: 0.5rem 0;
+    width: 21.5rem;
+}
+
+#opening-hours-grid div {
+    background-color: var(--quickbite-red);
+    height: 3rem;
+    width: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
