about page finished, contact page started

--- a/styles/about.css
+++ b/styles/about.css
@@ -66,23 +66,26 @@ div#text p {
    margin: 3rem auto;
 }
 
-#opening-hours-grid {
-    justify-content: center;
-    gap: 0.5rem;
+table {
+    border: 3px solid var(--quickbite-gold);
+    text-align: center;
     margin: 0 auto;
-    background-color: var(--quickbite-gold);
-    display: grid;
-    grid-template-columns: repeat(2, 10rem);
-    grid-template-rows: repeat(7, 3rem);
-    padding: 0.5rem 0;
-    width: 21.5rem;
+    width: 17rem;
+    border-collapse: collapse;
 }
 
-#opening-hours-grid div {
-    background-color: var(--quickbite-red);
-    height: 3rem;
-    width: 10rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.day {
+    text-align: left;
+    padding-left: 1.5rem;
+}
+
+@media (max-width: 400px) {
+    table {
+        max-width: 14rem;
+    }
+
+    .day {
+        padding-left: 0.5rem;
+    }
+    
 }
