--- a/styles/about.css
+++ b/styles/about.css
@@ -27,8 +27,6 @@
     z-index: 2;
 }
 
-
-
 div#text {
     position: relative;
     z-index: 0;
@@ -44,6 +42,23 @@ div#text p {
     font-size: 1rem;
 }
 
+p#scroll-prompt {
+    animation-name: slow-fade;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes slow-fade {
+    0% {
+        opacity: 1;
+      }
+      50% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+}
 
 #location {
     text-align: center;
@@ -74,6 +89,10 @@ table {
     border-collapse: collapse;
 }
 
+#opening-hours-heading {
+    padding-right: 0.5rem;
+}
+
 .day {
     text-align: left;
     padding-left: 1.5rem;
@@ -85,7 +104,7 @@ table {
     }
 
     .day {
-        padding-left: 0.5rem;
+        padding-left: 1rem;
     }
     
 }
