--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ nav {
     height: 22vw;
     max-height: 8rem;
     position: sticky;
-    top: 1vh;
+    top: 0;
     width: 100%;
     align-items: center;
 }
