--- a/styles/about.css
+++ b/styles/about.css
@@ -25,24 +25,37 @@
     pointer-events: none;
 }
 
+#filter { 
+    z-index: 8;
+    background-color: black;
+    opacity: 0.4;
+    width: 100%;
+    height: 100%;
+}
+
 #middle {
-    z-index: 5;
+    z-index: 6;
 }
 
 #foreground {
-    z-index: 6;
+    z-index: 7;
     bottom: 0;
 }
 
+#background {
+    z-index: 4;
+    top: 0;
+}
+
 #foreground-2 {
-    z-index: 1;
+    z-index: 3;
 }
 
 div#text {
     position: relative;
-    z-index: 6;
+    z-index: 9;
     padding: 0 1rem;
-    margin: 20vh auto 0 auto;
+    margin: 30vh auto 0 auto;
 }
 
 div#text h1 {
