--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,3 +1,11 @@
+html.background-image {
+    background-image: url("../images-and-svgs/images/yellow-sky.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+
 #welcome-text p#menu-description {
     text-align: center;
     margin: 0 auto;
@@ -6,20 +14,33 @@
 }
 
 #title-wrapper {
-    margin: 3rem auto 1.5rem auto;
+    margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: center;  
+    justify-content: center;
+}
+
+#welcome-text {
+    margin: 1rem auto;
+    padding: 1rem;
+    background-color: var(--quickbite-red);
+    max-width: 50%; 
+    color: var(--quickbite-gold);
+    border-radius: 8px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 #welcome-text h1 {
-    margin: 0 1.5rem;
-    color: white;
+    margin: 0rem;
     font-weight: 600;
+    color: white;
 }
 
 #welcome-text img {
-    height: 2rem;
+    min-height: 1rem;
+    height: 5vw;
+    max-height: 2rem;
+    margin: auto 1rem;
 }
 
 #category-welcome-text {
@@ -30,6 +51,13 @@
 #category-welcome-text img {
     height: 1.5rem;
 }
+
+/* #menu-list{
+    background-color: var(--quickbite-gold);
+    border-radius: 4px;
+    padding: 1rem;
+    margin: 1rem auto;
+} */
 
 #menu h2 {
     margin: 0 1rem;
@@ -67,7 +95,7 @@ font-size: 1.25rem;
 }
 
 .individual-list-item {
-    margin: 0.5rem 0rem 1rem 0rem;
+    margin: 0.5rem 0rem 0rem 0rem;
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 4px;
     padding: 0.5rem 1rem;
@@ -84,7 +112,11 @@ font-size: 1.25rem;
 }
 
 .menu-list-item {
-    margin: 2rem 0;
+    margin:  1rem 0;
+    background-color: var(--quickbite-gold);
+    border-radius: 8px;
+    padding: 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 p.category-description {
@@ -97,4 +129,18 @@ p.category-description {
 
 .price {
     font-weight: bold;
+}
+
+#menu-continue-prompt {
+    background-color: var(--quickbite-red);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 8px;
+    padding: 1rem;
+    max-width: 50%;
+    margin: 1rem auto;
+    
+}
+
+#menu-continue-prompt h1 {
+    margin: 0 auto;
 }
