--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -29,7 +29,7 @@
 
 .side-button-container {
     display: inline-block;
-    margin: 1rem auto;
+    margin: 0 auto 1rem auto;
     height: 1.5rem;
     width: 2rem;
     background-color: var(--quickbite-red);
