--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,11 +1,3 @@
-html.background-image {
-    background-image: url("../images-and-svgs/images/yellow-sky.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-
-}
-
 #welcome-text p#menu-description {
     text-align: center;
     margin: 0 auto;
@@ -51,13 +43,6 @@ html.background-image {
 #category-welcome-text img {
     height: 1.5rem;
 }
-
-/* #menu-list{
-    background-color: var(--quickbite-gold);
-    border-radius: 4px;
-    padding: 1rem;
-    margin: 1rem auto;
-} */
 
 #menu h2 {
     margin: 0 1rem;
@@ -124,7 +109,7 @@ p.category-description {
 }
 
 .dishtype-list-item {
-    margin-bottom: 1.75rem;
+    margin-top: 1rem;
 }
 
 .price {
