--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,3 +1,8 @@
+#menu {
+    text-align: center;
+    max-width: 700px;
+}
+
 #welcome-text p#menu-description {
     text-align: center;
     margin: 0 auto;
@@ -38,6 +43,7 @@
 #category-welcome-text {
     display: flex;
     align-items: center; 
+    justify-content: center;
 }
 
 #category-welcome-text img {
@@ -49,7 +55,7 @@
 }
 
 #menu h3 {
-text-align: left;
+/* text-align: left; */
 color: var(--quickbite-red);
 margin: 0.5rem 0 0 0;
 font-size: 1.25rem;
@@ -64,14 +70,18 @@ font-size: 1.25rem;
 
 #menu h4 {
     margin: 0 0 0 0;
-    text-align: left;
+    /* text-align: left; */
     font-size: 1.1rem;
     font-weight: 800;
     color: var(--quickbite-red);
 }
 
-#menu p {
-    text-align: left;
+.menu-list-item {
+    margin:  1rem 0;
+    background-color: var(--quickbite-gold);
+    border-radius: 8px;
+    padding: 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .menu-list-item h2 {
@@ -96,13 +106,7 @@ font-size: 1.25rem;
     margin: 0;
 }
 
-.menu-list-item {
-    margin:  1rem 0;
-    background-color: var(--quickbite-gold);
-    border-radius: 8px;
-    padding: 1rem;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-}
+
 
 p.category-description {
     margin-bottom: 0.5rem;
