--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,6 @@
 .non-menu.content.alt {
     max-width: 700px;
+    margin: 10rem auto 0 auto;
 }
 
 .non-menu.alt h2 {
@@ -13,8 +14,6 @@
 .non-menu.alt p {
     margin-bottom: 1rem;
 }
-
-
 #design li {
     margin-top: 0.5rem;
 }
