--- a/styles/style.css
+++ b/styles/style.css
@@ -162,12 +162,30 @@ nav.alt #nav-bar li p.active {
     color: var(--quickbite-gold);
 }
 
+@keyframes slideInFromTop{
+    0%  {
+        transform: translateY(-200%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInFromRight{
+    0%  {
+        transform: translateX(200%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
 
 #logo-small {
     opacity: 1;
     max-width: 5rem;
     width: 18vw;
     margin: 1rem;
+    animation: 0.75s ease-in-out 0s 1 slideInFromTop;
 }
 
 #nav-button {
@@ -176,9 +194,10 @@ nav.alt #nav-bar li p.active {
     width: 34px;
     border: 1px transparent white;
     border-radius: 6px;
-    margin: 1rem 1rem 1rem 5vw;
+    margin: 1rem;
     transition: background-color 0.3s ease-out;
     cursor: pointer;
+    animation: 0.5s ease-in-out 0s 1 slideInFromRight;
 }
 
 .nav-line {
@@ -197,6 +216,7 @@ nav.alt #nav-bar li p.active {
     margin: 0 1rem;
     font-size: 1.5rem;
     color: white;
+    animation: 0.75s ease-in-out 0s 1 slideInFromRight;
 }
 
 #nav-bar li {
@@ -331,6 +351,7 @@ nav.alt #nav-bar li p.active {
 
 #restaurant-info {
     font-size: 1rem;
+    padding-top: 5rem;
 }
 
 h3 .logo-text {
@@ -370,12 +391,12 @@ p .logo-text {
 
 .non-menu h3 {
     margin: 0 auto 0.5rem auto;
-    text-align: left
+    text-align: center;
 }
 
 .non-menu p {
     font-size: 1rem;
-    text-align: left;
+    text-align: center;
     margin: 0 auto;
 }
 
