--- a/styles/style.css
+++ b/styles/style.css
@@ -56,12 +56,17 @@ ul {
 main {
     margin: 0 auto;
 }
+.landing {
+    background-color: var(--quickbite-gold);
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+}
 
 #welcome-section { 
     background-color: var(--quickbite-gold);
-}
-
-.landing {
     margin: 0 auto;
     text-align: center;
     width: 100%;
@@ -248,7 +253,7 @@ nav.alt #nav-bar li p.active {
     height: 1.5rem;
 }
 
-#nav-bar li .sub-menu {
+.sub-menu {
     font-size: 1.1rem;
     position: absolute;
     height: auto;
